# vsync_streamlit_app

./: .gitignore  Readme.md  app.py  app_utils.py  flipcard.css  flipcard.html  flk_scrapper.py  flk_scrapper_utils.py  packages.txt  pyproject.toml  requirements.txt  rest_db.py  sample_data.csv  streamlit_app.py  streamlit_app_bkp.py  streamlit_app_cache.py  streamlit_app_deploy_bkp.py  streamlit_app_gcs.py  streamlit_app_stable.py  test_gcolab.py
.github/workflows/: terraform-lambda-ranker.yaml
data_engineering/: flk_scrapper.py
db_utils/: batch_atlas_sync.py
infrastructure/: backend.tf  main.tf  variables.tf
infrastructure/fast_lambda/: main.tf  role_policy.tf  variables.tf
infrastructure/fast_lambda/poetry/: pyproject.toml
infrastructure/fast_lambda/src/: fastembed_wrap.py
infrastructure/flash_lambda/: main.tf  pyproject.toml  role_policy.tf  variables.tf
infrastructure/flash_lambda/policies/: aws_lambda_iam_policy.json
infrastructure/flash_lambda/src/: flash_rank.py
ml_retrievers/: fastembed_wrap.py  flash_rank.py  flash_retriever_utils.py
ui_component/: flipcard.js
wip_sratch_pads/: temp.py
