[tool.poetry]
name = "vsync-streamlit-app"
version = "0.1.0"
description = "Lambda Layer Dependencies"
authors = ["Mayank Kumar <mayankkom.dev@gmail.com>"]
readme = "README.md"
packages = [{include = "vsync_streamlit_app"}]

[tool.poetry.dependencies]
python = "^3.10"
flashrank = "^0.1.66"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
