[tool.poetry]
name = "vsync-streamlit-app"
version = "0.1.0"
description = "Lambda Deployment"
authors = ["Mayank Kumar <mayankkom.dev@gmail.com>"]
readme = "Readme.md"

[tool.poetry.dependencies]
python = "^3.12"
flashrank = "^0.1.66"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
