[tool.poetry]
name = "vsync-streamlit-app"
version = "0.1.0"
description = ""
authors = ["Mayank Kumar <mayankkom.dev@gmail.com>"]
readme = "Readme.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastembed = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
